// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VBreadcrumbsItem.ts should render component and match snapshot 1`] = `
<li>
  <div tabindex="0"
       class="v-breadcrumbs__item"
  >
  </div>
</li>
`;

exports[`VBreadcrumbsItem.ts should render component with active & link state and match snapshot 1`] = `
<li>
  <div tabindex="0"
       class="v-breadcrumbs__item"
       aria-current="page"
  >
  </div>
</li>
`;
